BFAST -- History of visible changes.

Copyright (C) 2008-2009, University of California - Los Angeles
See COPYING for copying conditions.

Please send bfast bug reports to nhomer@cs.ucla.edu

Version 0.5.3
* Added C implementation of solid2fastq.pl for faster fastq generation.
* Fixing bug in qseq2fastq.pl that did not complement but only reversed
the seconde end of a paired end read.

Version 0.5.2
* Fixing bug when searching secondary indexes (introduced in 0.5.0
when zlib use started).

Version 0.5.1
* Fixed a bug when trying to read in secondary indexes in bmatches.
* Updated make check for creating the distribution.
* Truncating the keysize now works in bmatches.
* Updated the default scoring matrix so that it does not need to be
specified.
* Updating gzreads and gzwrites for custom 64-bit support.
* Updating the maximum number of matches behaviour in 
* Adding in some new helper functions to calculate the power or sensitivity
of the alignments.

Version 0.5.0
* All output files now use the zlib for compression.  This includes brg,
bif, bmf, and baf files.
* Removed brepair and breport as they are now obsolete.

Version 0.4.7
* Updated output file naming in bmfconvert.
* Updated bug in balign regarding retrieving the substitutions scores.

Version 0.4.6
* Simplified the scoring matrix.  Now only match/mismatch is required for
input.
* Updated bug in color space local aligner if the color match score was
not zero. Also enforcing all color match and color mismatch scores
respectively to be the same to allow for an optimization in the algorithm.

Version 0.4.5
* Moved mapping quality calculation to balign.  BAF files have an extra
field specifying the mapping quality.  For 0.4.1-0.4.4 BAF versions, use
fixbaf to convert them to 0.4.5 versions.
* Removed bfix - obsolete.

Version 0.4.4
* Fixed bugs when outputting to SAM format.
* Added bmf conversion to fastq.
* Fixed bug in RGRanges, where pallindromic sequences were being removed
from one strand.